--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -14,7 +14,7 @@
 }
 
 .nav__container {
-    padding: $xs-size 0 $xs-size 0;
+    padding: $xs-size 0 $s-size 0;
     align-self: flex-end;
 }
 
